--- a/topbar.html
+++ b/topbar.html
@@ -5,7 +5,7 @@
 
   {% include head.html %}
 
-  <body class="topbar">
+  <body class="topbar" style="text-align: center">
 
     <div class="wordart tilt">
         <span class="text">Welcome to Marten's homepage</span>
