Fix frame location bar

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 
 <frameset rows="100,*">
-  <frame src="/topbar.html" />
+  <frame src="/topbar.html" name="topbar" scrolling="no" />
   <frameset cols="300,*">
-      <frame src="/menu.html" />
-      <frame src="/main.html" name="main" />
+      <frame src="/menu.html" name="side" />
+      <frame src="/home.html" name="main" />
   </frameset>
 </frameset>
 
