--- a/menu.html
+++ b/menu.html
@@ -10,11 +10,11 @@
             <tr>
                 <td>
                     <ul>
+                        <li><a href="/home.html" target="main">Home</a></li>
                         <li><a href="/about.html" target="main">About me</a></li>
-                        <li><a href="https://github.com/marten">Github <img src="/hotbutton.gif" /> </a></li>
-                        <li><a href="https://twitter.com/mveldth">Twitter</a></li>
-                        <li><a href="https://zooniverse.org">Work</a></li>
-                        
+                        <li><a href="https://github.com/marten" target="_top">Github <img src="/hotbutton.gif" /> </a></li>
+                        <li><a href="https://twitter.com/mveldth" target="_top">Twitter</a></li>
+                        <li><a href="https://zooniverse.org" target="_top">Work</a></li>
                     </ul>
                 </td>
             </tr>
@@ -50,6 +50,8 @@
         
         <hr >
         <p style="color: yellow"><b>Webmaster: ME!</b></p>
+
+        <script type="text/javascript" src="/marten.js"></script>
     </body>
 </html>
 
