Fix menu appearing in history

--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,9 @@
     {% include head.html %}
     
     <body class="topbar">
+        <script type="text/javascript">
+            window.isMenu = true;
+        </script>
         
         <table border="1" bgcolor="white" width="100%">
             <tr>
