--- a/menu.html
+++ b/menu.html
@@ -22,7 +22,7 @@
                 </td>
             </tr>
             <tr>
-                <td align="center">Click on the letter icon to send me E-Mail: 
+                <td align="center">Click on the spinning E to talk to me: 
                     <a href="mailto:first@lastname.com">
                         <img src="/email.gif" />
                     </a>
