--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ layout: default
         <td width="200">&nbsp;</td>
         <td>
             I have been a webmaster for 20 years now, so I am ace at building sites now. Welcome to my little corner of the internet.
-            I currently work at Zooniverse, and before that I worked at RoQua, and before that I worked at Joyent, and before that I worked at TextDrive. Somewhere along the way I managed to get an MSc in computer science.
+            I currently work at <a href="https://www.roqua.nl">RoQua</a>, and before that I worked at <a href="https://www.zooniverse.org">Zooniverse</a> and before that I worked at RoQua, and before that I worked at <a href="https://joyent.com">Joyent</a>, and before that I worked at TextDrive. Somewhere along the way I managed to get an MSc in computer science.
         </td>
     </tr>
 </table>
